--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.8",
+    "@types/aos": "^3.0.7",
+    "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
@@ -22,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "realestate": "file:..",
     "redux-persist": "^6.0.0",
